调整统计代码

--- a/lib/conf/index.html
+++ b/lib/conf/index.html
@@ -47,7 +47,7 @@ body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
   <p><span>安装使用教程：</span><a target="_blank" href="http://www.moqifei.com/ltnmp" class="links">ltnmp一键安装包</a></p>
 
   <div class="text-center"><h3>ltnmp一键安装包By：技安(Andy) <a href="http://www.moqifei.com" target="_blank">技安后院</a></h3></div>
-  <span style="display:none;"><script type="text/javascript">var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F62bfb99db37ae1d63b0dfd367d384646' type='text/javascript'%3E%3C/script%3E"));</script><script type="text/javascript" src="http://tajs.qq.com/stats?sId=37179767" charset="UTF-8"></script></span>
+  <span style="display:none;"><script language="javascript" type="text/javascript" src="http://js.users.51.la/18583200.js"></script><noscript><a href="http://www.51.la/?18583200" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/18583200.asp" style="border:none" /></a></noscript></span>
 </div>
 </body>
 </html>
