--- a/lib/conf/index.html
+++ b/lib/conf/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="技安">
 <meta name="copyright" content="Copyright (c) 技安 All Rights Reserved." />
 <meta name="keywords" content="ltnmp,ltnmp一键安装包,一键安装包,技安">
-<meta name="description" content="ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、MariaDB/MySQL、PHP、phpMyAdmin)生产环境的Shell程序。">
+<meta name="description" content="ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、MariaDB、PHP、phpMyAdmin)生产环境的Shell程序。">
 <style type="text/css">
 body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
 .links {color: #009900}
@@ -21,9 +21,9 @@ body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
 
   <h1 class="text-center">ltnmp2.0一键安装包</h1>
 
-  <h3>ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、PHP、MariaDB/MySQL、phpMyAdmin)生产环境的Shell程序。<br>ltnmp一键安装包是基于LNMP基础上二次开发的一键安装包，增加了淘宝服务器Tengine和MariaDB。<br>ltnmp一键安装包By：技安(Andy) &lt;php360#qq.com&gt;(把#换成@)</h3>
+  <h3>ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、PHP、MariaDB、phpMyAdmin)生产环境的Shell程序。<br>ltnmp一键安装包是基于LNMP基础上二次开发的一键安装包，增加了淘宝服务器Tengine和MariaDB。<br>ltnmp一键安装包By：技安(Andy) &lt;php360#qq.com&gt;(把#换成@)</h3>
 
-  <p>默认安装组件：tengine-2.1.0，php-5.6.11，mariadb-10.0.20，phpMyAdmin-4.4.12-all-languages，ioncube Loader，Zend Guard Loader</p>
+  <p>默认安装组件：tengine-2.1.0，php-5.6.12，mariadb-10.0.20，phpMyAdmin-4.4.12-all-languages，ioncube Loader，Zend Guard Loader</p>
 
   <p><span>查看本地环境：</span><a href="p.php" class="links">探针</a>　<a href="phpmyadmin/" class="links">phpMyAdmin</a>(为了更安全，建议将phpmyadmin目录重命名或者新建一个目录将phpmyadmin移动进去更为不容易猜到的目录！)</p>
 
