--- a/lib/conf/index.html
+++ b/lib/conf/index.html
@@ -19,11 +19,13 @@ body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
   <br />
   <div class="text-center"><img src="ltnmp.gif" alt="ltnmp一键安装包"></div><br>
 
-  <h1 class="text-center">ltnmp2.0一键安装包</h1>
+  <h1 class="text-center">ltnmp2.1.0一键安装包</h1>
 
   <h3>ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、PHP、MariaDB、phpMyAdmin)生产环境的Shell程序。<br>ltnmp一键安装包是基于LNMP基础上二次开发的一键安装包，增加了淘宝服务器Tengine和MariaDB。<br>ltnmp一键安装包By：技安(Andy) &lt;php360#qq.com&gt;(把#换成@)</h3>
 
-  <p>默认安装组件：tengine-2.1.0，php-5.6.12，mariadb-10.0.20，phpMyAdmin-4.4.12-all-languages，ioncube Loader，Zend Guard Loader</p>
+  <p>默认安装组件：tengine-2.1.1，php-5.6.12，mariadb-10.0.20，phpMyAdmin-4.4.14-all-languages，</p>
+  <p>安装过程可选组件：nginx-1.9.4，mysql-5.6.26</p>
+  <p>可选组件：redis-3.0.3，phalcon-v2.0.7，yaf-2.3.3，swoole-1.7.18-stable，composer-1.0-dev，ioncube Loader，Zend Guard Loader</p>
 
   <p><span>查看本地环境：</span><a href="p.php" class="links">探针</a>　<a href="phpmyadmin/" class="links">phpMyAdmin</a>(为了更安全，建议将phpmyadmin目录重命名或者新建一个目录将phpmyadmin移动进去更为不容易猜到的目录！)</p>
 
