安装完成默认首页调整更新

--- a/lib/conf/index.html
+++ b/lib/conf/index.html
@@ -10,22 +10,21 @@
 <style type="text/css">
 body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
 .links {color: #009900}
-#main {margin:0 auto;width: 920px;}
+#main {margin:0 auto;padding: 10px 20px;}
 .text-center{text-align:center;}
 </style>
 </head>
 <body>
 <div id="main">
-  <br />
-  <div class="text-center"><img src="ltnmp.gif" alt="ltnmp一键安装包"></div><br>
+  <div class="text-center"><img src="ltnmp.gif" alt="ltnmp一键安装包"></div>
 
-  <h1 class="text-center">ltnmp2.1.0一键安装包</h1>
+  <h1 class="text-center">ltnmp一键安装包(v2.1.0)</h1>
 
-  <h3>ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、PHP、MariaDB、phpMyAdmin)生产环境的Shell程序。<br>ltnmp一键安装包是基于LNMP基础上二次开发的一键安装包，增加了淘宝服务器Tengine和MariaDB。<br>ltnmp一键安装包By：技安(Andy) &lt;php360#qq.com&gt;(把#换成@)</h3>
+  <p>ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、PHP、MariaDB、phpMyAdmin)生产环境的Shell程序。ltnmp一键安装包是基于lnmp基础上二次开发的一键安装包，增加了淘宝服务器Tengine和MariaDB。</p>
 
-  <p>默认安装组件：tengine-2.1.1，php-5.6.12，mariadb-10.0.20，phpMyAdmin-4.4.14-all-languages，</p>
-  <p>安装过程可选组件：nginx-1.9.4，mysql-5.6.26</p>
-  <p>可选组件：redis-3.0.3，phalcon-v2.0.7，yaf-2.3.3，swoole-1.7.18-stable，composer-1.0-dev，ioncube Loader，Zend Guard Loader</p>
+  <p>该版本默认安装组件：tengine-2.1.1，php-5.6.12，mariadb-10.0.20，phpMyAdmin-4.4.14-all-languages<br />安装过程可选组件：nginx-1.9.4，mysql-5.6.26</p>
+
+  <p>安装完成后可选安装组件：redis-3.0.3，phalcon-v2.0.7，yaf-2.3.3，swoole-1.7.18-stable，composer-1.0-dev，ioncube Loader，Zend Guard Loader</p>
 
   <p><span>查看本地环境：</span><a href="p.php" class="links">探针</a>　<a href="phpmyadmin/" class="links">phpMyAdmin</a>(为了更安全，建议将phpmyadmin目录重命名或者新建一个目录将phpmyadmin移动进去更为不容易猜到的目录！)</p>
 
@@ -48,7 +47,10 @@ body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
 
   <p><span>安装使用教程：</span><a target="_blank" href="http://www.moqifei.com/ltnmp" class="links">ltnmp一键安装包</a></p>
 
-  <div class="text-center"><h3>ltnmp一键安装包By：技安(Andy) <a href="http://www.moqifei.com" target="_blank">技安后院</a></h3></div>
+  <div class="text-center">
+    <p>ltnmp一键安装包By：技安(Andy) &lt;php360#qq.com&gt;(把#换成@)</p>
+    <p>我的博客：<a href="http://www.moqifei.com" target="_blank">技安后院</a></p>
+  </div>
   <span style="display:none;"><script language="javascript" type="text/javascript" src="http://js.users.51.la/18583200.js"></script><noscript><a href="http://www.51.la/?18583200" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/18583200.asp" style="border:none" /></a></noscript></span>
 </div>
 </body>
