默认首页调整

--- a/lib/conf/index.html
+++ b/lib/conf/index.html
@@ -6,7 +6,7 @@
 <meta name="author" content="技安">
 <meta name="copyright" content="Copyright (c) 技安 All Rights Reserved." />
 <meta name="keywords" content="ltnmp,ltnmp一键安装包,一键安装包,技安">
-<meta name="description" content="ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、MariaDB、PHP、phpMyAdmin)生产环境的Shell程序。">
+<meta name="description" content="ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、MariaDB/Mysql、PHP、phpMyAdmin)生产环境的Shell程序。">
 <style type="text/css">
 body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
 .links {color: #009900}
@@ -20,7 +20,7 @@ body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
 
   <h1 class="text-center">ltnmp一键安装包(v2.1.0)</h1>
 
-  <p>ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、PHP、MariaDB、phpMyAdmin)生产环境的Shell程序。ltnmp一键安装包是基于lnmp基础上二次开发的一键安装包，增加了淘宝服务器Tengine和MariaDB。</p>
+  <p>ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、PHP、MariaDB/Mysql、phpMyAdmin)生产环境的Shell程序。ltnmp一键安装包是基于lnmp基础上二次开发的一键安装包，增加了淘宝服务器Tengine和MariaDB。</p>
 
   <p>该版本默认安装组件：tengine-2.1.1，php-5.6.12，mariadb-10.0.20，phpMyAdmin-4.4.14-all-languages<br />安装过程可选组件：nginx-1.9.4，mysql-5.6.26</p>
 
