默认首页文件调整

--- a/lib/conf/index.html
+++ b/lib/conf/index.html
@@ -22,7 +22,7 @@ body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
 
   <p>ltnmp一键安装包是一个用Linux Shell编写的可以为CentOS/RadHat、Debian/Ubuntu VPS(VDS)或独立主机安装ltnmp(Linux、Tengine/Nginx、PHP、MariaDB/Mysql、phpMyAdmin)生产环境的Shell程序。ltnmp一键安装包是基于lnmp基础上二次开发的一键安装包，增加了淘宝服务器Tengine和MariaDB。</p>
 
-  <p>该版本默认安装组件：tengine-2.1.1，php-5.6.12，mariadb-10.0.21，phpMyAdmin-4.4.14-all-languages<br />安装过程可选组件：nginx-1.9.4，mysql-5.6.26</p>
+  <p>该版本(v2.1.0)默认安装组件：tengine-2.1.1，php-5.6.12，mariadb-10.0.21，phpMyAdmin-4.4.14-all-languages<br />安装过程可选组件：nginx-1.9.4，mysql-5.6.26</p>
 
   <p>安装完成后可选安装组件：redis-3.0.3，phalcon-v2.0.7，yaf-2.3.3，swoole-1.7.18-stable，composer-1.0-dev，ioncube Loader，Zend Guard Loader</p>
 
@@ -39,13 +39,9 @@ body {color:#333333;font-family:tahoma,arial,微软雅黑,helvetica,sans-serif;}
       <span>Github：</span>
       <a target="_blank" href="https://github.com/php360/ltnmp" class="links">https://github.com/php360/ltnmp</a>
     </li>
-    <li>
-      <span>ltnmp最新版下载：</span>
-      <a target="_blank" href="http://pan.baidu.com/s/1c0HHC9E" class="links">百度盘</a>
-    </li>
   </ul>
 
-  <p><span>安装使用教程：</span><a target="_blank" href="http://www.moqifei.com/ltnmp" class="links">ltnmp一键安装包</a></p>
+  <p><span>ltnmp最新版下载和安装使用教程：</span><a target="_blank" href="http://www.moqifei.com/ltnmp" class="links">ltnmp一键安装包</a></p>
 
   <div class="text-center">
     <p>ltnmp一键安装包By：技安(Andy) &lt;php360#qq.com&gt;(把#换成@)</p>
